Layout: Prevent footer from overlapping content.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@ body {
   }
 
   padding-top: 6rem;
-  margin-bottom: 60px;
+  margin-bottom: 220px;
 }
 
 main {
